# agentic-rag-lexguard

./: .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml
src/: database.py  engine.py  main.py  ui.py
tests/: test1.py  test_agent_logic.py  test_agent_traces.py  test_final_answer.py  test_multiple_files.py  test_retrieval.py
