[project]
name = "agentic-rag-lexguard"
version = "1.0.0"
description = "Agentic RAG for Zero-Shot Document Intelligence featuring Invariant Extraction and Semantic Independence"
authors = [
    {name = "Sanan Akther", email = "sananakthar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "langgraph>=0.0.30",
    "langchain-ollama>=0.0.3",
    "langchain-qdrant>=0.0.1",
    "qdrant-client>=1.8.0",
    "pypdf>=4.1.0",
    "langfuse>=2.0.0",
    "streamlit>=1.32.0",
    "ragas>=0.1.0",
    "python-multipart>=0.0.9"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
